--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
         </tr>
       </tbody>
     </table>
-    <div style="position: absolute; left: 56%; top: 18%;">
+    <div style="position: absolute; left: 56%; top: 130px;">
       <iframe style="border-style: none;" src="playlist.html" height="200" width="460"></iframe>
     </div>
-    <div style="position: absolute; left: 53%; top: 50%;">
+    <div style="position: absolute; left: 53%; top: 365px;">
       <span class="fullsize"><em>Audovia 3.0.12 for Microsoft Windows</em>&nbsp;</span>
       <a href="https://bintray.com/artifact/download/songbuilder/generic/installAudovia-3-0-12.msi"
         style="text-decoration:none;">
