--- a/index.html
+++ b/index.html
@@ -46,9 +46,9 @@
         <tr>
           <td style="vertical-align: top; width: 180px;">
             <a href="doc/AudoviaDocumentation-3-0-8.pdf" target="_blank">
-              <img title="Find out how to use Audovia to make music with
-up to 15 instrumental voices and a percussion track
-and export to MIDI, MusicXML, WAV and MP3.
+              <img title="Learn how to use Audovia to make music with up to
+15 instrumental voices and a percussion track and
+export to MIDI, MusicXML, WAV and MP3.
 Create songs on your own or with your co-workers
 by using a shared database."
                 alt="Song Builder Icon" src="image/SongBuilderColourIcon96.png"
