--- a/playlist.html
+++ b/playlist.html
@@ -24,7 +24,7 @@
             <span class="composer">J S Bach</span>
           </td>
           <td>
-            <span title="play/pause" onclick="playPause(songArray[1], audioArray[1])" class="song" id="song1">Prelude BWV 556</span>
+            <span title="Click to play or pause and double-click to rewind." onclick="playPause(songArray[1], audioArray[1])" ondblclick="onEnd(songArray[1], audioArray[1])" class="song" id="song1">Prelude BWV 556</span>
           </td>
         </tr>
         <tr>
@@ -32,7 +32,7 @@
             <span class="composer">J S Bach</span>
           </td>
           <td>
-            <span title="play/pause" onclick="playPause(songArray[6], audioArray[6])" class="song" id="song6">Sheep May Safely Graze</span>
+            <span title="Click to play or pause and double-click to rewind." onclick="playPause(songArray[6], audioArray[6])" ondblclick="onEnd(songArray[6], audioArray[6])" class="song" id="song6">Sheep May Safely Graze</span>
           </td>
         </tr>
         <tr>
@@ -40,7 +40,7 @@
             <span class="composer">W A Mozart</span>
           </td>
           <td>
-            <span title="play/pause" onclick="playPause(songArray[2], audioArray[2])" class="song" id="song2">Recordare</span>
+            <span title="Click to play or pause and double-click to rewind." onclick="playPause(songArray[2], audioArray[2])" ondblclick="onEnd(songArray[2], audioArray[2])" class="song" id="song2">Recordare</span>
           </td>
         </tr>
         <tr>
@@ -48,7 +48,7 @@
             <span class="composer">A Vivaldi</span>
           </td>
           <td>
-            <span title="play/pause" onclick="playPause(songArray[3], audioArray[3])" class="song" id="song3">Gloria</span>
+            <span title="Click to play or pause and double-click to rewind." onclick="playPause(songArray[3], audioArray[3])" ondblclick="onEnd(songArray[3], audioArray[3])" class="song" id="song3">Gloria</span>
           </td>
         </tr>
         <tr>
@@ -56,7 +56,7 @@
             <span class="composer">G F Handel</span>
           </td>
           <td>
-            <span title="play/pause" onclick="playPause(songArray[4], audioArray[4])" class="song" id="song4">Zadok the Priest</span>
+            <span title="Click to play or pause and double-click to rewind." onclick="playPause(songArray[4], audioArray[4])" ondblclick="onEnd(songArray[4], audioArray[4])" class="song" id="song4">Zadok the Priest</span>
           </td>
         </tr>
         <tr>
@@ -64,7 +64,7 @@
             <span class="composer">G F Handel</span>
           </td>
           <td>
-            <span title="play/pause" onclick="playPause(songArray[5], audioArray[5])" class="song" id="song5">Arrival of the Queen of Sheba</span>
+            <span title="Click to play or pause and double-click to rewind." onclick="playPause(songArray[5], audioArray[5])" ondblclick="onEnd(songArray[5], audioArray[5])" class="song" id="song5">Arrival of the Queen of Sheba</span>
           </td>
         </tr>
       </tbody>
