--- a/bagpipe_playlist.html
+++ b/bagpipe_playlist.html
@@ -83,6 +83,14 @@
             <span class="composer">John MacLellan</span>
           </td>
         </tr>
+        <tr>
+          <td>
+            <span title="Click to play or pause and double-click to rewind." onclick="playPause(songArray[9], audioArray[9])" ondblclick="onEnd(songArray[9], audioArray[9])" class="song" id="song9">Major A C W May's Welcome</span>
+          </td>
+          <td>
+            <span class="composer">Hamish MacColl</span>
+          </td>
+        </tr>
       </tbody>
     </table>
 
@@ -94,6 +102,7 @@
     <audio id="audio6" onended="onEnd(songArray[6], audioArray[6])" src="music/TheHillsOfAlva.mp3"></audio>
     <audio id="audio7" onended="onEnd(songArray[7], audioArray[7])" src="music/HorsbrughCastle.mp3"></audio>
     <audio id="audio8" onended="onEnd(songArray[8], audioArray[8])" src="music/TheHeroesOfVittoria.mp3"></audio>
+    <audio id="audio9" onended="onEnd(songArray[9], audioArray[9])" src="music/MajorACWMaysWelcome.mp3"></audio>
 
 
     <script type="text/javascript">
@@ -107,6 +116,7 @@
       audioArray[6] = document.getElementById("audio6");
       audioArray[7] = document.getElementById("audio7");
       audioArray[8] = document.getElementById("audio8");
+      audioArray[9] = document.getElementById("audio9");
 
 
       var songArray = new Array();
@@ -119,6 +129,7 @@
       songArray[6] = document.getElementById("song6");
       songArray[7] = document.getElementById("song7");
       songArray[8] = document.getElementById("song8");
+      songArray[9] = document.getElementById("song9");
 
 
       function onEnd(song, audio)
