--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ by using a shared database."
               <img src="http://ssl.gstatic.com/images/icons/gplus-32.png"
                 alt="Google+" style="border:0; width:32px; height:32px;">
             </a>
-            &nbsp;&nbsp;
+            &nbsp;
             <a href="https://github.com/SongBase/Audovia"
               target="_blank"><img src="image/GitHub-Mark-32px.png"
                 alt="GitHub" style="border:0; width:32px; height:32px;">
