--- a/index.html
+++ b/index.html
@@ -92,9 +92,10 @@
         </button>
       </a>
     </div>
-    <div style="width: 980px; background-color: #ffffff; opacity: 0.5; margin: auto; position: absolute; top: 620px; left: 60px; right: 60px; border: 8px solid white;">
-      <span class="fullsize">Transcribe your scores into Audovia and export to MIDI, MusicXML or WAV.&nbsp;
-      Songs can have up to 15 instrumental voices and a percussion track with instruments chosen from any .sf2 or .dls soundbank.
+    <div style="width: 980px; background-color: #ffffff; opacity: 0.5; margin: auto; position: absolute; top: 620px; left: 0px; right: 0px; border: 8px solid white;">
+      <span class="fullsize">Transcribe your scores into Audovia using JFugue MusicString notation.&nbsp;
+      Songs can have up to 15 instrumental voices and a percussion track with instruments chosen from a .sf2 or .dls soundbank.&nbsp;
+      Play back your music and export to MIDI, MusicXML or WAV.&nbsp; The WAV files can be opened in Audacity for export to MP3.
       </span>
     </div>
   </body>
