--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       a:link {color: #551A8B;}
       a:visited {color: #551A8B;}
       a:active {color: #EE0000;}
-      a.nounderline {text-decoration:none;}
+      a.nounderline {text-decoration:none; font-weight:bold;}
       div.centre {text-align: center;}
       div.left {text-align: left;}
       div.subheader {color: #551A8B; line-height: 1.8; text-align: center;}
@@ -95,7 +95,8 @@
     <div style="width: 980px; background-color: #ffffff; opacity: 0.5; margin: auto; position: absolute; top: 620px; left: 0px; right: 0px; border: 8px solid white;">
       <span class="fullsize">Transcribe your scores into Audovia using JFugue MusicString notation.&nbsp;
       Songs can have up to 15 instrumental voices and a percussion track with instruments chosen from a .sf2 or .dls soundbank.&nbsp;
-      Play back your music and export to MIDI, MusicXML or WAV.&nbsp; The WAV files can be opened in Audacity and exported to MP3.
+      Play back your music and export to MIDI, MusicXML or WAV.&nbsp; The WAV files can be opened in <a class="nounderline" href="http://audacityteam.org/" target="_blank">Audacity</a>
+      and exported to MP3.
       </span>
     </div>
   </body>
