update piobaireachd practice

--- a/piobaireachd_practice.html
+++ b/piobaireachd_practice.html
@@ -12,7 +12,7 @@
     <meta property="og:description" content="Audio playlist where the song titles change colour when they are played or paused.">
     <style type="text/css">
       span.composer {color: #817F73; font-family: Verdana; font-size: 18px;}
-      span.song {color: #551A8B; cursor: pointer; font-family: Verdana; font-size: 18px;}
+      span.song {color: #551A8B; cursor: pointer; font-family: Verdana; font-size: 18px; line-height: 1.5;}
       span.part {color: #551A8B; cursor: pointer; font-family: Verdana; font-size: 15px;}
     </style>
   </head>
